c/src/test/resources/c/nec_bnc/valid/ex25-3.ctrl
<controlFile>
  <sourceFile name="../ex25.c" id="1" />
  <run>
    <startPosition fileId="1" line="15" />
    <wayPoint fileId="1" line="18" >
      <loop iterTimes = "1" >
        <wayPoint fileId="1" line="19" >
          <function funcName="foo" >
            <wayPoint fileId="1" line="6" />
          </function>
        </wayPoint>
      </loop>
      <loop iterTimes = "1" >
        <wayPoint fileId="1" line="19" >
          <function funcName="foo" >
            <wayPoint fileId="1" line="7" >
              <command>
                <cascadeFunction>cascade_check</cascadeFunction>
                <argument><![CDATA[
                  x < 1000 && x > 0
                ]]>
                </argument>
              </command>
            </wayPoint>
            <wayPoint fileId="1" line="10" >
              <loop iterTimes="1" />
            </wayPoint>
          </function>
        </wayPoint>
      </loop>
      <loop iterTimes = "1" >
        <wayPoint fileId="1" line="19" >
          <function funcName="foo" >
            <wayPoint fileId="1" line="7" >
              <command>
                <cascadeFunction>cascade_check</cascadeFunction>
                <argument><![CDATA[
                  x < 1000 && x > 0
                ]]>
                </argument>
              </command>
            </wayPoint>
            <wayPoint fileId="1" line="10" >
              <loop iterTimes="2" />
            </wayPoint>
          </function>
        </wayPoint>
      </loop>
    </wayPoint>
    <wayPoint fileId="1" line="21" >
      <loop iterTimes = "1" >
        <wayPoint fileId="1" line="22" >
          <function funcName="foo" >
            <wayPoint fileId="1" line="6" />
          </function>
        </wayPoint>
      </loop>
      <loop iterTimes = "1" >
        <wayPoint fileId="1" line="22" >
          <function funcName="foo" >
            <wayPoint fileId="1" line="7" >
              <command>
                <cascadeFunction>cascade_check</cascadeFunction>
                <argument><![CDATA[
                  x < 1000 && x > 0
                ]]>
                </argument>
              </command>
            </wayPoint>
            <wayPoint fileId="1" line="10" >
              <loop iterTimes="1" />
            </wayPoint>
          </function>
        </wayPoint>
      </loop>
      <loop iterTimes = "1" >
        <wayPoint fileId="1" line="22" >
          <function funcName="foo" >
            <wayPoint fileId="1" line="7" >
              <command>
                <cascadeFunction>cascade_check</cascadeFunction>
                <argument><![CDATA[
                  x < 1000 && x > 0
                ]]>
                </argument>
              </command>
            </wayPoint>
            <wayPoint fileId="1" line="10" >
              <loop iterTimes="2" />
            </wayPoint>
          </function>
        </wayPoint>
      </loop>
    </wayPoint>
    <endPosition fileId="1" line="25" />
  </run>
</controlFile>